Finished responsive design on mobile

--- a/src/page/aboutme/aboutme.scss
+++ b/src/page/aboutme/aboutme.scss
@@ -45,6 +45,7 @@
         border-radius: 20px;
         box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
       }
+
       h4 {
         position: absolute;
         font-weight: 800;
@@ -130,12 +131,14 @@
     padding-top: 20px;
 
     .aboutme__story {
-      margin-top: 20px;
-      justify-content: space-around;
+      margin: 20px 0px;
+      flex-direction: column-reverse;
+      align-items: baseline;
 
       .aboutme__story--journey {
-        font-size: 14px;
+        font-size: 12px;
         line-height: 180%;
+        width: 100%;
 
         strong {
           line-height: 180%;
@@ -144,12 +147,17 @@
       }
 
       .aboutme__story--passion {
+        align-items: flex-start;
+        margin-bottom: 20px;
+
         img {
-          width: 250px;
+          width: 120px;
         }
 
         h4 {
           font-size: 2.5rem;
+          padding-top: 4%;
+          padding-left: 10%;
         }
       }
     }
