--- a/src/page/contact/contact.scss
+++ b/src/page/contact/contact.scss
@@ -34,7 +34,15 @@
 
 //Mobile
 @media (max-width: 767px){
-  h1 {
-    font-size: 40px !important;
+  #contact {
+    margin: 20px;
+
+    .contact__wrapper {
+      padding: 20px;
+      h1 {
+        font-size: 20px !important;
+      }
+    }
   }
+
 }
