--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -276,7 +276,7 @@ to {
 
   .contact-info {
     font-size: 30px;
-    margin-left: 20px;
+    margin-left: 20px !important;
   }
 
   #downloadCV {
